fixed broken delete route

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,48 @@
 <html>
+  <head>
+    <title>Happy New Year! New Years resolutions!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
+  </head>
 <body>
+  <center>
+  <img src="https://happynewyear2018.wiki/wp-content/uploads/2017/08/Happy-New-Year-2018.jpg" height="50px" width="500px">
+  <h1>Add your New Years Resolution!</h1>
+
+  <div class="field">
+      <div class="control">
   <form method="POST" action="/">
-    <input type="text" name="title">
-    <input type="submit" value="Add">
+    <input type="text" name="title" class="input is-primary">
+    <input type="submit" value="Add" class="button is-primary is-outlined">
   </form>
-</body>
-</form>
+  </div>
+</div>
+  <h1>Resolutions</h1>
+  <table>
+      {% for resolution in resolutions %}
+      <tr>
+        <td>
+      <p>{{resolution.title}}</p>
+        </td>
+        <td>
+            <div class="field">
+                <div class="control">
+      <form method="POST" action="./update" style="display: inline">
+        <input type="hidden" value="{{resolution.title}}" name="oldtitle" class="input is-primary">
+        <input type="text" value="{{resolution.title}}" name="newtitle" class="input is-primary">
+        <input type="submit" value="Update" class="button is-primary is-outlined">
+      </form>
+      </td>
+      <td>
+      <form method="POST" action="./delete" style="display: inline">
+      <input type="hidden" value="{{resolution.title}}" name="title" class="input is-primary">
+      <input type="submit" value="Delete" class="button is-primary is-outlined">
+      </form>
+      </td>
+    </tr>
+    {% endfor %}
+</table>
+    </center>
+  </body>
+</html>
